--- a/index.html
+++ b/index.html
@@ -99,42 +99,48 @@ p {
 }
 
 /* Benefits Box */
-.benefits-box {
-    background: white;
-    padding: 40px;
-    border-radius: 15px;
-    margin: 40px auto;
+/* Change this part of the CSS */
+.benefits-grid {
+    display: flex;
+    flex-direction: column;
     max-width: 800px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    margin: 40px auto;
+    gap: 20px;
+}
+
+.point {
+    background: white;
+    padding: 25px 30px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    transition: transform 0.3s ease;
+    width: 100%;
+}
+
+.point p {
+    text-align: left;
+    margin: 0;
 }
 
 .benefits-list {
     list-style: none;
     padding: 0;
-    margin: 30px 0;
+    margin: 30px auto;
+    max-width: 800px;
 }
 
 .benefits-list li {
-    font-size: 1.2rem;
+    background: white;
+    padding: 20px 30px;
+    border-radius: 10px;
     margin: 15px 0;
-    padding-left: 30px;
-    position: relative;
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
-
-.benefits-list li:before {
-    content: "•";
-    color: var(--accent-color);
-    font-weight: bold;
-    position: absolute;
-    left: 0;
-}
-
-/* Grid Layouts */
-.benefits-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 30px;
-    margin: 40px 0;
 }
 
 .point {
